fixed modal height on mobile and fixed data attr on filter modal

--- a/mobile/css/scss/mobile.scss
+++ b/mobile/css/scss/mobile.scss
@@ -519,9 +519,6 @@ $tag-color: rgb(187, 182, 181);
     }
   } /* end .span8 */
   .filter-notes-modal {
-    .modal-body {
-      overflow: hidden;
-    }
     .planning {
       background-color: $planning-color;
     }
